<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.dashboard.UserDashboard">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/semibold"
                android:text="@string/Header"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:tint="@color/htmlGray"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_notification"
                tools:ignore="VectorDrawableCompat" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:background="@drawable/search_bg"
                android:drawableLeft="@drawable/ic_search_black_24dp"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@android:string/search_go"
                android:inputType="textPersonName"
                android:paddingStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/editText">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:tabTextColor="@color/htmlGray"
                app:tabSelectedTextColor="@color/htmlPaleVioletRed"
                app:layout_constraintTop_toBottomOf="@id/editText"
                app:layout_constraintStart_toStartOf="parent"
                app:tabMode="scrollable"
                app:tabGravity="fill"
                >
                <com.google.android.material.tabs.TabItem
                    android:text="@string/tab_foodstore"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <com.google.android.material.tabs.TabItem
                    android:text="@string/tab_hygienestore"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
                <com.google.android.material.tabs.TabItem
                    android:text="@string/tab_greenstore"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </com.google.android.material.tabs.TabLayout>

        </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>


</LinearLayout>